<resources>
    <string name="app_name" translatable="false">Odyssey</string>
    <string name="permission_request_snackbar_button" translatable="false">@android:string/ok</string>
    <string name="permission_request_storage_snackbar_explanation">Storage Permission is needed to load music files.</string>
    <string name="permission_request_audio_snackbar_explanation">Read Media Audio Permission is needed to load music files.</string>
    <string name="permission_request_notifications_snackbar_explanation">Show Notifications Permission is required for Mediascanner and Bulkdownloader.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_menu_my_music">My Music</string>
    <string name="nav_menu_saved_playlists">Playlists</string>
    <string name="nav_menu_settings">Settings</string>
    <string name="nav_menu_bookmarks">Bookmarks</string>
    <string name="nav_menu_files">Files</string>
    <string name="nav_menu_info">Information</string>
    <string name="share_chooser_title">Share track with</string>
    <string name="fragment_title_my_music">My Music</string>
    <string name="fragment_title_saved_playlists">Playlists</string>
    <string name="fragment_title_settings">Settings</string>
    <string name="fragment_title_bookmarks">Bookmarks</string>
    <string name="fragment_title_recent_albums">Recently Added</string>
    <string name="empty_saved_playlists_message">No playlists found.</string>
    <string name="playlist_type_global">Global</string>
    <string name="playlist_type_local">Local</string>
    <string name="fragment_bookmarks_tracks">Tracks</string>
    <string name="empty_bookmarks_message">No bookmarks found.</string>
    <string name="empty_directory_message">No supported formats or .nomedia file found.</string>
    <string name="fragment_title_artists">Artists</string>
    <string name="fragment_title_albums">Albums</string>
    <string name="fragment_title_all_tracks">Tracks</string>
    <string name="empty_artists_message">No artists found.</string>
    <string name="empty_tracks_message">No tracks found.</string>
    <string name="empty_albums_message">No albums found.</string>
    <string name="dialog_save_playlist">Save Playlist</string>
    <string name="dialog_create_bookmark">Create Bookmark</string>
    <string name="dialog_action_cancel">Cancel</string>
    <string name="dialog_action_save">Save</string>
    <string name="dialog_choose_storage_volume_title">Choose storage volume</string>
    <string name="dialog_choose_bookmark">Choose bookmark</string>
    <string name="dialog_choose_playlist">Choose playlist</string>
    <string name="dialog_equalizer_not_found_title">No equalizer available</string>
    <string name="dialog_equalizer_not_found_message">Your device is missing an equalizer.</string>
    <string name="error_dialog_ok_action" translatable="false">@android:string/ok</string>
    <string name="dialog_sleep_timer">Set sleep time</string>
    <string name="dialog_sleep_timer_separator" translatable="false">:</string>
    <string name="dialog_sleep_timer_action_start">Start</string>
    <string name="dialog_sleep_timer_duration_minutes">Minutes</string>
    <string name="dialog_sleep_timer_duration_seconds">Seconds</string>
    <string name="dialog_sleep_timer_stop_after_current">Stop playback after currently playing song</string>
    <string name="dialog_no_browser_found_title">No Browser available</string>
    <string name="dialog_no_browser_found_message">Your device is missing a browser.</string>
    <string name="dialog_battery_opt_title">Battery optimization active</string>
    <string name="dialog_battery_opt_message">
        Battery optimization for Odyssey is active.
        \n\nThis will prevent Odyssey from automatically resuming playback after background playback was paused.
        \n\nPlease consider to deactivate this option in order to ensure Odyssey works correctly.
    </string>
    <string name="dialog_battery_opt_action_open_settings">Open settings</string>
    <string name="dialog_artwork_local_images_removed_title">Use local images option is removed</string>
    <string name="dialog_artwork_local_images_removed_message">
        Due to some policy changes we had to remove the option to support local images directly.
        \n\nThe option was disabled and odyssey will attempt to load images from the android media database instead.
        If you enabled another artwork provider in the settings this will be used as well.
    </string>
    <string name="artwork_local_images_removed_action_ok" translatable="false">@android:string/ok</string>
    <string name="default_playlist_title">New Playlist</string>
    <string name="default_bookmark_title">New Bookmark</string>
    <string name="create_new_bookmark">Create new bookmark</string>
    <string name="create_new_playlist">Create new playlist</string>
    <string name="action_add_album">Add Album</string>
    <string name="action_add_artist_albums">Add Albums</string>
    <string name="action_switch_storage_volume">Switch storage volume</string>
    <string name="action_add_directory">Add directory to queue</string>
    <string name="action_search">Search</string>
    <string name="action_add_playlist">Add playlist</string>
    <string name="action_set_default_directory">Set as default directory</string>
    <string name="action_start_mediascanner">Update media database here</string>
    <string name="action_reset_artwork">Reset artwork</string>
    <string name="action_wikipedia" translatable="false">Wikipedia</string>
    <string name="action_wikipedia_album">Open album</string>
    <string name="action_wikipedia_artist">Open artist</string>
    <string name="action_show_recent_albums">Recent albums</string>
    <string name="action_npv_show_playlist">Show playlist</string>
    <string name="action_npv_show_cover">Show cover</string>
    <string name="action_npv_more_options">More options</string>
    <string name="context_menu_action_enqueue">Add to queue</string>
    <string name="context_menu_action_enqueueasnext">Play after current song</string>
    <string name="context_menu_action_playsong">Play song</string>
    <string name="context_menu_action_playalbum">Play album</string>
    <string name="context_menu_action_playalbums">Play albums</string>
    <string name="context_menu_action_showartist">Show artist</string>
    <string name="context_menu_action_showalbum">Show album</string>
    <string name="context_menu_action_removetrack">Remove track</string>
    <string name="context_menu_action_removesection">Remove section</string>
    <string name="context_menu_action_playplaylist">Play playlist</string>
    <string name="context_menu_action_enqueueplaylist">Add playlist</string>
    <string name="context_menu_action_deleteplaylist">Delete playlist</string>
    <string name="context_menu_action_resumebookmark">Resume Bookmark</string>
    <string name="context_menu_action_deletebookmark">Delete Bookmark</string>
    <string name="context_menu_action_enqueue_folder">Add folder to queue</string>
    <string name="context_menu_action_play_folder">Play folder</string>
    <string name="context_menu_action_enqueue_file">Add file to queue</string>
    <string name="context_menu_action_play_file">Play file</string>
    <string name="popup_menu_action_shuffleplaylist">Shuffle playlist</string>
    <string name="popup_menu_action_clearplaylist">Clear playlist</string>
    <string name="popup_menu_action_saveplaylist">Save playlist</string>
    <string name="popup_menu_action_createbookmark">Create bookmark</string>
    <string name="popup_menu_action_startequalizer">Open equalizer</string>
    <string name="popup_menu_action_sharetrack">Share current track</string>
    <string name="pop_menu_action_start_sleep_timer">Start sleep timer</string>
    <string name="pop_menu_action_cancel_sleep_timer">Cancel sleep timer</string>
    <string name="track_title_template" translatable="false">%1$s - %2$s</string>
    <string name="track_duration_short_template" translatable="false">%02d:%02d</string>
    <string name="track_duration_long_template" translatable="false">%02d:%02d:%02d</string>
    <string name="timestamp_format_pattern" translatable="false">yyyy-MM-dd HH:mm</string>
    <string name="preference_show_album_artists_only_title">Only show album artists</string>
    <string name="preference_show_album_artists_only_summary">Only show album artists instead of all artists from database.</string>
    <string name="preference_launch_faq">FAQ</string>
    <string name="preference_launch_faq_text">Information how to get help for this application.</string>
    <string name="preference_launch_about">About</string>
    <string name="preference_launch_about_text">Version, license and contributors information.</string>
    <string name="preference_theme_title">Theme</string>
    <string name="preference_theme_summary">Select a different design for the application.</string>
    <string name="preference_theme_message">Select a theme</string>
    <string name="preference_dark_theme_title">Dark theme</string>
    <string name="preference_dark_theme_message">Use a dark theme</string>
    <string name="preference_legacy_theme_title">Legacy theme</string>
    <string name="preference_legacy_theme_message">Use the intense color legacy theming used in previous versions. These color schemes are not following the most recent Material design guidelines and are only kept for long-time users. The new themes are generated with Material Theme Builder.</string>
    <string name="preference_theme_item_indigo">Indigo</string>
    <string name="preference_theme_item_orange">Orange</string>
    <string name="preference_theme_item_deep_orange">Deep Orange</string>
    <string name="preference_theme_item_blue">Blue</string>
    <string name="preference_theme_item_dark_grey">Dark Grey</string>
    <string name="preference_theme_item_brown">Brown</string>
    <string name="preference_theme_item_light_green">Light Green</string>
    <string name="preference_theme_item_oled_dark">OLED Dark</string>
    <string name="preference_theme_item_red">Red</string>
    <string name="preference_theme_item_materialyou_auto">System-based (Automatic dark/light)</string>
    <string name="preference_theme_item_materialyou">System-based (Manual dark/light)</string>
    <string name="preference_album_sort_order_title">Artist Albums sort order</string>
    <string name="preference_album_sort_order_message">Sort by</string>
    <string name="preference_album_sort_order_summary">Select the sort order for albums of an artist.</string>
    <string name="preference_album_sort_order_name">Name</string>
    <string name="preference_album_sort_order_year">Year</string>
    <string name="preference_tracks_sort_order_title">Album Tracks sort order</string>
    <string name="preference_tracks_sort_order_summary">Select the sort order for tracks of an album.</string>
    <string name="preference_album_tracks_sort_number">Tracknumber</string>
    <string name="preference_album_tracks_sort_name">Displayname (Filename)</string>
    <string name="preference_default_view_title">Default view</string>
    <string name="preference_default_view_message">Select default view</string>
    <string name="preference_default_view_summary">Select the default view of the application.</string>
    <string name="preference_default_view_my_music_artists">Artists</string>
    <string name="preference_default_view_my_music_albums">Albums</string>
    <string name="preference_default_view_my_music_tracks">All tracks</string>
    <string name="preference_default_view_my_music_playlists">Playlists</string>
    <string name="preference_default_view_my_music_bookmarks">Bookmarks</string>
    <string name="url_faq" translatable="false">https://github.com/gateship-one/odyssey/wiki/FAQ</string>
</resources>