<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/fragment_files_action_add_folder"
        android:orderInCategory="100"
        android:title="@string/context_menu_action_enqueue_folder"
        app:showAsAction="never" />

    <item
        android:id="@+id/fragment_files_action_play_folder"
        android:orderInCategory="100"
        android:title="@string/context_menu_action_play_folder"
        app:showAsAction="never" />

    <item
        android:id="@+id/fragment_files_action_add_file"
        android:orderInCategory="100"
        android:title="@string/context_menu_action_enqueue_file"
        app:showAsAction="never" />

    <item
        android:id="@+id/fragment_files_action_play_file"
        android:orderInCategory="100"
        android:title="@string/context_menu_action_play_file"
        app:showAsAction="never" />
</menu>