<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/view_nowplaying_action_shuffleplaylist"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/popup_menu_action_shuffleplaylist"/>

    <item
        android:id="@+id/view_nowplaying_action_saveplaylist"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/popup_menu_action_saveplaylist"/>

    <item
        android:id="@+id/view_nowplaying_action_clearplaylist"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/popup_menu_action_clearplaylist"/>

    <item
        android:id="@+id/view_nowplaying_action_createbookmark"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/popup_menu_action_createbookmark"/>
</menu>