<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/view_current_playlist_action_remove"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/context_menu_action_removetrack"/>

    <item
        android:id="@+id/view_current_playlist_action_playnext"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/context_menu_action_enqueueasnext"/>

    <item
        android:id="@+id/view_current_playlist_action_showalbum"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/context_menu_action_showalbum"/>

    <item
        android:id="@+id/view_current_playlist_action_showartist"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/context_menu_action_showartist"/>

</menu>