<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2018 Team Team Gateship-One
  ~ (Hendrik Borghorst & Frederik Luetkes)
  ~
  ~ The AUTHORS.md file contains a detailed contributors list:
  ~ <https://github.com/gateship-one/odyssey/blob/master/AUTHORS.md>
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  ~
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference android:title="@string/preference_launch_faq"
        android:summary="@string/preference_launch_faq_text">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="@string/url_faq"/>
    </Preference>
    <Preference android:title="@string/preference_launch_about"
        android:summary="@string/preference_launch_about_text">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="org.gateshipone.odyssey.activities.OdysseyAboutActivity"
            android:targetPackage="org.gateshipone.odyssey" />
    </Preference>
</PreferenceScreen>