<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2018 Team Gateship-One
  ~ (Hendrik Borghorst & Frederik Luetkes)
  ~
  ~ The AUTHORS.md file contains a detailed contributors list:
  ~ <https://github.com/gateship-one/odyssey/blob/master/AUTHORS.md>
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  ~
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/nav_group_library"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_music"
            android:icon="@drawable/ic_my_library_music_24dp"
            android:title="@string/nav_menu_my_music" />
        <item
            android:id="@+id/nav_saved_playlists"
            android:icon="@drawable/ic_queue_music_24dp"
            android:title="@string/nav_menu_saved_playlists" />
        <item
            android:id="@+id/nav_bookmarks"
            android:icon="@drawable/ic_bookmark_black_24dp"
            android:title="@string/nav_menu_bookmarks"/>
        <item
            android:id="@+id/nav_files"
            android:icon="@drawable/ic_folder_48dp"
            android:title="@string/nav_menu_files"/>
    </group>

    <group android:id="@+id/nav_group_settings"
        android:checkableBehavior="single">
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings_24dp"
        android:title="@string/nav_menu_settings"/>
    <item
        android:id="@+id/nav_information"
        android:icon="@drawable/ic_help_black_24dp"
        android:title="@string/nav_menu_info"/>
    </group>
</menu>
